fix: input re-focus and style - adjust .inputBox z-index to -2 - .emailBox border-style to solid

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -36,6 +36,7 @@ form {
   height: 104px;
   position: relative;
   align-items: center;
+  z-index: -2;
 }
 
 .emailBox {
@@ -47,7 +48,9 @@ form {
   background-color: white;
   border-color: black;
   border-width: 3px 8px 3px 8px;
-  z-index: -3;
+  border-style: solid;
+  z-index: -1;
+
 }
 
 
